--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="red.jpg" style="width: 100%; height: 45vh;" alt="Intro">
+                                <img src="purple.jpg" style="width: 100%; height: 45vh;" alt="Intro">
                                 <div class="carousel-caption d-none d-md-block">
                                     <div class="home">
                                         <a href="https://github.com/plopor/Flappy-Bird-AI" target="_blank" class="btn"><i class="fa fa-github"></i>Github Repo</a>
@@ -218,10 +218,10 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="orange.jpg" style="width: 100%; height: 45vh;" alt="Intro">
+                                <img src="pink.jpg" style="width: 100%; height: 45vh;" alt="Intro">
                                 <div class="carousel-caption d-none d-md-block">
                                     <div class="home">
-                                        <a href="#" class="btn" disabled><i class="fa fa-github"></i>Github Repo</a>
+                                        <a href="https://github.com/plopor/Old-Web-Portfolio" target="_blank" class="btn"><i class="fa fa-github"></i>Github Repo</a>
                                     </div>
                                     Here lies my first web portfolio, may it rest in peace. I hope the current one is an improvement!
                                 </div>
@@ -248,7 +248,7 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="green.jpg" style="width: 100%; height: 45vh;" alt="Intro">
+                                <img src="blue.jpg" style="width: 100%; height: 45vh;" alt="Intro">
                                 <div class="carousel-caption d-none d-md-block">
                                     <div class="home">
                                         <a href="https://github.com/plopor/English-Detection-Neural-Network" target="_blank" class="btn"><i class="fa fa-github"></i>Github Repo</a>
