fixed some bugs with resizing and tree assets

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
     <div class="background">
         <div class="animContainer">
             <div class="move treelineLeft">
-                <img id="left" src="treesInner.png" style="margin-top: -15vh" alt="Moving trees">
+                <img id="left" src="treesInner.png" style="margin-top: -15vh; height: 100vh;" alt="Moving trees">
             </div>
             <p id="yeet"></p>
         </div>
 
         <div class="animContainer animRight">
             <div class="move treelineRight">
-                <img id="right" src="trees.png" style="margin-top: -2.5vh" alt="Moving trees">
+                <img id="right" src="trees.png" style="margin-top: -2.5vh; height: 100vh;" alt="Moving trees">
             </div>
         </div>
 
         <div class="animContainer animLeft">
             <div class="move treelineLeftFast">
-                <img id="left2" src="treesOut.png" style="margin-top: 10vh;" alt="Moving trees">
+                <img id="left2" src="treesOut.png" style="margin-top: 10vh; height: 100vh;" alt="Moving trees">
             </div>
         </div>
 
