--- a/index.html
+++ b/index.html
@@ -271,6 +271,36 @@
                         </a>
                     </div>
                 </div>
+                <div class="project">
+                    <div id="carousel4" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel4" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel4" data-slide-to="1"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="lblue.jpg" style="width: 100%; height: 45vh;" alt="Intro">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <div class="home">
+                                        <a href="https://github.com/plopor/OpenGL-Game-Engine" target="_blank" class="btn"><i class="fa fa-github"></i>Github Repo</a>
+                                    </div>
+                                    Work in in progress 2D game engine made using the OpenGL graphics library in C++. Games coming soon!
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="gmeng.png" style="width: 100%; height: 45vh;" alt="First slide">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carousel4" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel4" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="credits">Designed and written by Bowen Luo. Last updated September 10, 2019.</div>
