updated resume, changed header color, improved carousel buttons

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 else if (pastIntro && !inUse) {
                     inUse = true;
                     flexHeader.style.top = '0vh';
-                    flexHeader.style.background = 'grey';
+                    flexHeader.style.background = 'black';
                     var glow = setInterval(function () {
                         if (opacity > 0.8) {
                             inUse = false;
@@ -193,8 +193,8 @@
                             <div class="carousel-item active">
                                 <img src="purple.jpg" style="width: 100%; height: 45vh;" alt="Intro">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <div class="home">
-                                        <a href="https://github.com/plopor/Flappy-Bird-AI" target="_blank" class="btn"><i class="fa fa-github"></i>Github Repo</a>
+                                    <div class="home" style="padding-bottom: 2vh">
+                                        <a href="https://github.com/plopor/Flappy-Bird-AI" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
                                     </div>
                                     Wanted to play Flappy Bird but you're really bad? Me too! Instead watch this neural net learn to play for you... After sacrificing a couple thousand innocent birds.
                                 </div>
@@ -223,8 +223,8 @@
                             <div class="carousel-item active">
                                 <img src="pink.jpg" style="width: 100%; height: 45vh;" alt="Intro">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <div class="home">
-                                        <a href="https://github.com/plopor/Old-Web-Portfolio" target="_blank" class="btn"><i class="fa fa-github"></i>Github Repo</a>
+                                    <div class="home" style="padding-bottom: 2vh">
+                                        <a href="https://github.com/plopor/Old-Web-Portfolio" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
                                     </div>
                                     Here lies my first web portfolio, may it rest in peace. I hope the current one is an improvement!
                                 </div>
@@ -253,8 +253,8 @@
                             <div class="carousel-item active">
                                 <img src="blue.jpg" style="width: 100%; height: 45vh;" alt="Intro">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <div class="home">
-                                        <a href="https://github.com/plopor/English-Detection-Neural-Network" target="_blank" class="btn"><i class="fa fa-github"></i>Github Repo</a>
+                                    <div class="home" style="padding-bottom: 2vh">
+                                        <a href="https://github.com/plopor/English-Detection-Neural-Network" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
                                     </div>
                                     Made from scratch in Python, a neural network consisting of one input and two sigmoid-activated layers that uses back-propagation to determine whether the input word is English or not.
                                 </div>
@@ -283,8 +283,8 @@
                             <div class="carousel-item active">
                                 <img src="lblue.jpg" style="width: 100%; height: 45vh;" alt="Intro">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <div class="home">
-                                        <a href="https://github.com/plopor/OpenGL-Game-Engine" target="_blank" class="btn"><i class="fa fa-github"></i>Github Repo</a>
+                                    <div class="home" style="padding-bottom: 2vh">
+                                        <a href="https://github.com/plopor/OpenGL-Game-Engine" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
                                     </div>
                                     Work in in progress 2D game engine made using the OpenGL graphics library in C++. Games coming soon!
                                 </div>
@@ -305,7 +305,7 @@
                 </div>
             </div>
         </div>
-        <div class="credits">Designed and written by Bowen Luo. Last updated September 10, 2019.</div>
+        <div class="credits">Designed and written by Bowen Luo. Last updated April 30, 2020.</div>
     </div>
     <script>
         var height = window.innerHeight;
