--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <a href="#car" class="btn">Projects</a>
                     </div>
                     <div class="resume">
-                        <a href="#res" class="btn">Resume</a>
+                        <a href="#res" class="btn">Resumé</a>
                     </div>
                 </div>
             </div>
@@ -97,9 +97,6 @@
             </div>
             <div class="introInfo">
                 Hello there! Welcome to my work in progress web portfolio. Here, you will be able to find a few of my projects, my resumé, and whatever else I am currently testing out. Please have a look around!
-                <div style="color: red; font-weight: bold;">
-                    Carousels are temporarily disabled while content is updated!
-                </div>
             </div>
         </div>
 
@@ -257,7 +254,10 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="flappy.gif" style="width: 100%; height: 45vh;" alt="First slide">
+                                    <img src="flappyBirb.gif" style="width: 100%; height: 45vh;" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="flappyData.png" style="width: 100%; height: 45vh;" alt="Second slide">
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
@@ -265,39 +265,6 @@
                                 <span class="sr-only">Previous</span>
                             </a>
                             <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="projAndCap" style="background-color: #847cfc">
-                    <div class="projCaption">
-                        <div class="projHeader">
-                            <div class="home" style="padding-bottom: 2vh">
-                                <a href="https://github.com/plopor/Old-Web-Portfolio" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
-                            </div>
-                        </div>
-                        <div class="projMessage" style="font-weight: bold;">Here lies my first web portfolio.</div>
-                        <div class="projMessage" style="font-size: 15px;">May it rest in peace. I hope the current one is an improvement!</div>
-                    </div>
-                    <div class="project">
-                        <div id="carousel2" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#carousel2" data-slide-to="0" class="active"></li>
-                                <li data-target="#carousel2" data-slide-to="1"></li>
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="oldPortfolio.gif" style="width: 100%; height: 45vh;" alt="First slide">
-                                </div>
-                            </div>
-                            <a class="carousel-control-prev" href="#carousel2" role="button" data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="carousel-control-next" href="#carousel2" role="button" data-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -323,7 +290,10 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="net.png" style="width: 100%; height: 45vh;" alt="First slide">
+                                    <img src="training.gif" style="width: 100%; height: 45vh;" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="reTrain.png" style="width: 100%; height: 45vh;" alt="Second slide">
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carousel3" role="button" data-slide="prev">
@@ -339,6 +309,63 @@
                 </div>
 
                 <div class="projAndCap" style="background-color: #2c8c8c">
+                    <div class="projCaption">
+                        <div class="projHeader">
+                            <div class="home" style="padding-bottom: 2vh">
+                                <a href="https://github.com/plopor/Snake-game-2players" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
+                            </div>
+                        </div>
+                        <div class="projMessage" style="font-weight: bold;">Play a classic-ish game of snake!</div>
+                        <div class="projMessage" style="font-size: 15px;">Play a classic retro game against a friend, or if they are busy, against a selection of AI demonstrating different pathfinding algorithms!</div>
+                    </div>
+                    <div class="project">
+                        <div id="carousel5" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel5" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel5" data-slide-to="1"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="DFS.gif" style="width: 100%; height: 45vh;" alt="First slide">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carousel5" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carousel5" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="projAndCap" style="background-color: #847cfc">
+                    <div class="projCaption">
+                        <div class="projHeader">
+                            <div class="home" style="padding-bottom: 2vh">
+                                <a href="https://github.com/plopor/Old-Web-Portfolio" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
+                            </div>
+                        </div>
+                        <div class="projMessage" style="font-weight: bold;">Here lies my first web portfolio.</div>
+                        <div class="projMessage" style="font-size: 15px;">May it rest in peace. I hope the current one is an improvement!</div>
+                    </div>
+                    <div class="project">
+                        <div id="carousel2" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel2" data-slide-to="0" class="active"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="oldPort.gif" style="width: 100%; height: 45vh;" alt="First slide">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="projAndCap" style="background-color: #74547c">
                     <div class="projCaption">
                         <div class="projHeader">
                             <div class="home" style="padding-bottom: 2vh">
@@ -358,6 +385,9 @@
                                 <div class="carousel-item active">
                                     <img src="gmeng.png" style="width: 100%; height: 45vh;" alt="First slide">
                                 </div>
+                                <div class="carousel-item">
+                                    <img src="GLUTdata.png" style="width: 100%; height: 45vh;" alt="Second slide">
+                                </div>
                             </div>
                             <a class="carousel-control-prev" href="#carousel4" role="button" data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -376,7 +406,7 @@
         <div class="gap"></div>
 
         <div class="otherStuff">
-            <div class="headerText" id="res" style="color: #ffffff; padding-top:10vh;">Resume</div>
+            <div class="headerText" id="res" style="color: #ffffff; padding-top:10vh;">Resumé</div>
             <div class="resumeContainer">
                 <iframe src="resume.pdf" style="width: 82vw; height: 70vh;"></iframe>
             </div>
