added more insight to snake project

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                 <a href="https://github.com/plopor/English-Detection-Neural-Network" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
                             </div>
                         </div>
-                        <div class="projMessage" style="font-weight: bold;">English detection nerual network.</div>
+                        <div class="projMessage" style="font-weight: bold;">3nglish detection neur4l netw0rk.</div>
                         <div class="projMessage" style="font-size: 15px;">Made from scratch in Python, an input layer and two sigmoid-activated layers use back-propagation to determine whether or not a word is English.</div>
                     </div>
                     <div class="project">
@@ -316,17 +316,27 @@
                             </div>
                         </div>
                         <div class="projMessage" style="font-weight: bold;">Play a classic-ish game of snake!</div>
-                        <div class="projMessage" style="font-size: 15px;">Play a classic retro game against a friend, or if they are busy, against a selection of AI demonstrating different pathfinding algorithms!</div>
+                        <div class="projMessage" style="font-size: 15px;">Play a classic retro game against a friend, or if they are busy, against a selection of <div style="color: lawngreen; font-size: 15px;">AI pathfinding algorithms</div> demonstrating the decision-making of each! <div style="color: blue; font-size: 15px;">The blue one is me!</div></div>
                     </div>
                     <div class="project">
                         <div id="carousel5" class="carousel slide" data-ride="carousel">
                             <ol class="carousel-indicators">
                                 <li data-target="#carousel5" data-slide-to="0" class="active"></li>
                                 <li data-target="#carousel5" data-slide-to="1"></li>
+                                <li data-target="#carousel5" data-slide-to="2"></li>
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="DFS.gif" style="width: 100%; height: 45vh;" alt="First slide">
+                                    <img src="Astar.gif" style="width: 100%; height: 45vh;" alt="First slide">
+                                    <div style="color: white; font-size: 15px; margin-top: -20px; padding-left: 5px;">A* Search Algorithm</div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="BFS.gif" style="width: 100%; height: 45vh;" alt="Second slide">
+                                    <div style="color: white; font-size: 15px; margin-top: -20px; padding-left: 5px;">Breadth First Search Algorithm</div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="DFS.gif" style="width: 100%; height: 45vh;" alt="Third slide">
+                                    <div style="color: white; font-size: 15px; margin-top: -20px; padding-left: 5px;">Depth First Search Algorithm</div>
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carousel5" role="button" data-slide="prev">
