updated resume, added linkedIn, lengthened resume container

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <div class="introContainer">
             <div class="introButtons">
                 <a href="https://github.com/plopor" style="margin-right: 3vw;" target="_blank" class="btnIntro"><i class="fa fa-github"> Github</i></a>
+                <a href="https://www.linkedin.com/in/bowen-luo-938639162/" style="margin-right: 3vw;" target="_blank" class="btnIntro"><i class="fa fa-linkedin"> LinkedIn</i></a>
                 <div class="dropup">
                     <button href="#" class="btnIntro dropdown-toggle" style="display: block;" disabled data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-envelope"> Contact Info</i></button>
                     <div class="dropdown-menu">
@@ -418,9 +419,9 @@
         <div class="otherStuff">
             <div class="headerText" id="res" style="color: #ffffff; padding-top:10vh;">Resumé</div>
             <div class="resumeContainer">
-                <iframe src="resume.pdf" style="width: 82vw; height: 70vh;"></iframe>
+                <iframe src="resume.pdf" style="width: 100%; height: 100%;"></iframe>
             </div>
-            <div class="credits">Designed and written by Bowen Luo. Last updated May 2, 2020.</div>
+            <div class="credits">Designed and written by Bowen Luo. Last updated May 11, 2020.</div>
         </div>
     </div>
 
