added gif to snake pathfinding for hamiltonian cycles

--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
                                 <li data-target="#carousel5" data-slide-to="0" class="active"></li>
                                 <li data-target="#carousel5" data-slide-to="1"></li>
                                 <li data-target="#carousel5" data-slide-to="2"></li>
+                                <li data-target="#carousel5" data-slide-to="3"></li>
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
@@ -336,7 +337,11 @@
                                     <div style="color: white; font-size: 15px; margin-top: -20px; padding-left: 5px;">Breadth First Search Algorithm</div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="DFS.gif" style="width: 100%; height: 45vh;" alt="Third slide">
+                                    <img src="uHamil.gif" style="width: 100%; height: 45vh;" alt="Third slide">
+                                    <div style="color: white; font-size: 15px; margin-top: -20px; padding-left: 5px;">Unmodified Hamiltonian Cycle</div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="DFS.gif" style="width: 100%; height: 45vh;" alt="Fourth slide">
                                     <div style="color: white; font-size: 15px; margin-top: -20px; padding-left: 5px;">Depth First Search Algorithm</div>
                                 </div>
                             </div>
