added devpost to projects and updated resume

--- a/index.html
+++ b/index.html
@@ -357,6 +357,30 @@
                     </div>
                 </div>
 
+                <div class="projAndCap" style="background-color: #74547c">
+                    <div class="projCaption">
+                        <div class="projHeader">
+                            <div class="home" style="padding-bottom: 2vh">
+                                <a href="https://devpost.com/software/connect-trgsfk" target="_blank" class="btnCarou"><img src="devpost.png" style="width: 2vw; height: 2vw;" alt="DevIcon"> Devpost</a>
+                            </div>
+                        </div>
+                        <div class="projMessage" style="font-weight: bold;">Hack the North: Connect.</div>
+                        <div class="projMessage" style="font-size: 15px;">A fast and convenient way to transfer data! An Android app leveraging NFC for data transfer turning smartphones into tap terminals. Includes a configuration webpage built with Vue.js with data stored on Google Firebase.</div>
+                    </div>
+                    <div class="project">
+                        <div id="carousel2" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel2" data-slide-to="0" class="active"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="connect.jpg" style="width: 100%; height: 45vh;" alt="First slide">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="projAndCap" style="background-color: #847cfc">
                     <div class="projCaption">
                         <div class="projHeader">
