--- a/index.html
+++ b/index.html
@@ -236,15 +236,79 @@
             </div>
             <div class="headerText" id="car" style="color: #ffffff; z-index: 1000; padding-top: 10vh;">Projects</div>
             <div class="projectContainer">
+                <div class="projAndCap" style="background-color: #2c8c8c">
+                    <div class="RTprojCaption" style="padding-bottom: 36px;">
+                        <div class="projHeader">
+                            <div class="home" style="padding-bottom: 2vh">
+                                <a href="https://github.com/plopor/Raytracer" target="_blank" class="btnCarou" ><i class="fa fa-github"> Github Repo</i></a>
+                            </div>
+                        </div>
+                        <div class="projMessage" style="font-weight: bold;">Photo-realistic Raytracer</div>
+                        <div class="projMessage" style="font-size: 15px;">A raytracer demonstrating a variety of computer graphics techniques, check it out!</div>
+                    </div>
+
+                    <div class="RTproject">
+                        <div id="carousel7" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel7" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel7" data-slide-to="1"></li>
+                                <li data-target="#carousel7" data-slide-to="2"></li>
+                                <li data-target="#carousel7" data-slide-to="3"></li>
+                                <li data-target="#carousel7" data-slide-to="4"></li>
+                                <li data-target="#carousel7" data-slide-to="5"></li>
+                                <li data-target="#carousel7" data-slide-to="6"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="final.png" style="width: 100%; height: 45vh;" alt="First slide">
+                                    <div style="color: white; font-size: 15px; margin-top: -20px; padding-left: 5px; padding-bottom: 10px;">Final Scenes</div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="SSAA.png" style="width: 100%; height: 45vh;" alt="Second slide">
+                                    <div style="color: white; font-size: 15px; margin-top: -20px; padding-left: 5px; padding-bottom: 10px;">No SSAA (left) vs Supersampling Anti-aliasing</div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="reflection.png" style="width: 100%; height: 45vh;" alt="Third slide">
+                                    <div style="color: white; font-size: 15px; margin-top: -20px; padding-left: 5px; padding-bottom: 10px;">Mirror (left) vs Glossy Reflection</div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="refraction.png" style="width: 100%; height: 45vh;" alt="Fourth slide">
+                                    <div style="color: white; font-size: 15px; margin-top: -20px; padding-left: 5px; padding-bottom: 10px;">Perfect (left) vs Glossy Refraction</div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="soft_shadows.png" style="width: 100%; height: 45vh;" alt="Fifth slide">
+                                    <div style="color: white; font-size: 15px; margin-top: -20px; padding-left: 5px; padding-bottom: 10px;">Hard (left) vs Soft Shadows</div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="texture_map.png" style="width: 100%; height: 45vh;" alt="Sixth slide">
+                                    <div style="color: white; font-size: 15px; margin-top: -20px; padding-left: 5px; padding-bottom: 10px;">Texture Mapping</div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="bump_map.png" style="width: 100%; height: 45vh;" alt="Seventh slide">
+                                    <div style="color: white; font-size: 15px; margin-top: -20px; padding-left: 5px; padding-bottom: 10px;">Bump Mapping</div>
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carousel7" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carousel7" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="projAndCap" style="background-color: #a4445c">
-                    <div class="projCaption">
+                    <div class="projCaption" style="padding-bottom: 35px;">
                         <div class="projHeader">
                             <div class="home" style="padding-bottom: 2vh">
                                 <a href="https://github.com/plopor/Flappy-Bird-AI" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
                             </div>
                         </div>
-                        <div class="projMessage" style="font-weight: bold;">Wanted to play Flappy Bird but you're really bad?</div>
-                        <div class="projMessage" style="font-size: 15px;">Me too! Instead watch this neural net learn to play for you... After sacrificing a couple thousand innocent birds.</div>
+                        <div class="projMessage" style="font-weight: bold;">Flappy Bird Neural Net</div>
+                        <div class="projMessage" style="font-size: 15px;">Watch this evolutionary neural net learn to play for you... After sacrificing a couple thousand innocent birds.</div>
                     </div>
 
                     <div class="project">
@@ -255,10 +319,10 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="flappyBirb.gif" style="width: 100%; height: 45vh;" alt="First slide">
+                                    <img src="flappyBirb.gif" style="width: 100%; height: calc(45vh - 2.5px);" alt="First slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="flappyData.png" style="width: 100%; height: 45vh;" alt="Second slide">
+                                    <img src="flappyData.png" style="width: 100%; height: calc(45vh - 2.5px);" alt="Second slide">
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
@@ -274,50 +338,14 @@
                 </div>
 
                 <div class="projAndCap" style="background-color: #74547c">
-                    <div class="projCaption">
-                        <div class="projHeader">
-                            <div class="home" style="padding-bottom: 2vh">
-                                <a href="https://github.com/plopor/English-Detection-Neural-Network" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
-                            </div>
-                        </div>
-                        <div class="projMessage" style="font-weight: bold;">3nglish detection neur4l netw0rk.</div>
-                        <div class="projMessage" style="font-size: 15px;">Made from scratch in Python, an input layer and two sigmoid-activated layers use back-propagation to determine whether or not a word is English.</div>
-                    </div>
-                    <div class="project">
-                        <div id="carousel3" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#carousel3" data-slide-to="0" class="active"></li>
-                                <li data-target="#carousel3" data-slide-to="1"></li>
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="training.gif" style="width: 100%; height: 45vh;" alt="First slide">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="reTrain.png" style="width: 100%; height: 45vh;" alt="Second slide">
-                                </div>
-                            </div>
-                            <a class="carousel-control-prev" href="#carousel3" role="button" data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="carousel-control-next" href="#carousel3" role="button" data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="projAndCap" style="background-color: #2c8c8c">
-                    <div class="projCaption">
+                    <div class="projCaption" style="padding-bottom: 35px;">
                         <div class="projHeader">
                             <div class="home" style="padding-bottom: 2vh">
                                 <a href="https://github.com/plopor/Snake-game-2players" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
                             </div>
                         </div>
-                        <div class="projMessage" style="font-weight: bold;">Play a classic-ish game of snake!</div>
-                        <div class="projMessage" style="font-size: 15px;">Play a classic retro game against a friend, or if they are busy, against a selection of <div style="color: lawngreen; font-size: 15px;">AI pathfinding algorithms</div> demonstrating the decision-making of each! <div style="color: blue; font-size: 15px;">The blue one is me!</div></div>
+                        <div class="projMessage" style="font-weight: bold;">Snake Pathfinding</div>
+                        <div class="projMessage" style="font-size: 15px;">Play a classic retro game against a friend, or if they are busy, against a selection of <div style="color: lawngreen; font-size: 15px;">pathfinding algorithms</div> demonstrating the decision-making of each! <div style="color: blue; font-size: 15px;">The blue one is me!</div></div>
                     </div>
                     <div class="project">
                         <div id="carousel5" class="carousel slide" data-ride="carousel">
@@ -357,8 +385,44 @@
                     </div>
                 </div>
 
-                <div class="projAndCap" style="background-color: #74547c">
-                    <div class="projCaption">
+                <div class="projAndCap" style="background-color: #2c8c8c">
+                    <div class="projCaption" style="padding-bottom: 35px;">
+                        <div class="projHeader">
+                            <div class="home" style="padding-bottom: 2vh">
+                                <a href="https://github.com/plopor/English-Detection-Neural-Network" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
+                            </div>
+                        </div>
+                        <div class="projMessage" style="font-weight: bold;">English Detection Neural Net.</div>
+                        <div class="projMessage" style="font-size: 15px;">Made from scratch in Python, an input layer and two sigmoid-activated layers use back-propagation to determine whether or not a word is English.</div>
+                    </div>
+                    <div class="project">
+                        <div id="carousel3" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel3" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel3" data-slide-to="1"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="training.gif" style="width: 100%; height: calc(45vh - 2.5px);" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="reTrain.png" style="width: 100%; height: calc(45vh - 2.5px);" alt="Second slide">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carousel3" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carousel3" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="projAndCap" style="background-color: #a4445c">
+                    <div class="projCaption" style="padding-bottom: 35px;">
                         <div class="projHeader">
                             <div class="home" style="padding-bottom: 2vh">
                                 <a href="https://devpost.com/software/connect-trgsfk" target="_blank" class="btnCarou"><img src="devpost.png" style="width: 2vw; height: 2vw;" alt="DevIcon"> Devpost</a>
@@ -374,7 +438,7 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="connect.jpg" style="width: 100%; height: 45vh;" alt="First slide">
+                                    <img src="connect.jpg" style="width: 100%; height: calc(45vh - 2.5px);" alt="First slide">
                                 </div>
                             </div>
                         </div>
@@ -382,13 +446,13 @@
                 </div>
 
                 <div class="projAndCap" style="background-color: #847cfc">
-                    <div class="projCaption">
+                    <div class="projCaption" style="padding-bottom: 35px;">
                         <div class="projHeader">
                             <div class="home" style="padding-bottom: 2vh">
                                 <a href="https://github.com/plopor/Old-Web-Portfolio" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
                             </div>
                         </div>
-                        <div class="projMessage" style="font-weight: bold;">Here lies my first web portfolio.</div>
+                        <div class="projMessage" style="font-weight: bold;">Legacy Web Portfolio.</div>
                         <div class="projMessage" style="font-size: 15px;">May it rest in peace. I hope the current one is an improvement!</div>
                     </div>
                     <div class="project">
@@ -398,21 +462,21 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="oldPort.gif" style="width: 100%; height: 45vh;" alt="First slide">
+                                    <img src="oldPort.gif" style="width: 100%; height: calc(45vh - 2.5px);" alt="First slide">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="projAndCap" style="background-color: #74547c">
-                    <div class="projCaption">
+                <div class="projAndCap" style="background-color:#74547c">
+                    <div class="projCaption" style="padding-bottom: 35px;">
                         <div class="projHeader">
                             <div class="home" style="padding-bottom: 2vh">
                                 <a href="https://github.com/plopor/OpenGL-Game-Engine" target="_blank" class="btnCarou"><i class="fa fa-github"> Github Repo</i></a>
                             </div>
                         </div>
-                        <div class="projMessage" style="font-weight: bold;">OpenGL game engine.</div>
+                        <div class="projMessage" style="font-weight: bold;">OpenGL Game Engine.</div>
                         <div class="projMessage" style="font-size: 15px;">Work in progress 2D game engine made using the OpenGL graphics library in C++. Coming soon!</div>
                     </div>
                     <div class="project">
@@ -423,10 +487,10 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="gmeng.png" style="width: 100%; height: 45vh;" alt="First slide">
+                                    <img src="gmeng.png" style="width: 100%; height: calc(45vh - 2.5px);" alt="First slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="GLUTdata.png" style="width: 100%; height: 45vh;" alt="Second slide">
+                                    <img src="GLUTdata.png" style="width: 100%; height: calc(45vh - 2.5px);" alt="Second slide">
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carousel4" role="button" data-slide="prev">
